# Console-Game-Graphics-Engine

./: CMakeLists.txt  README.md  TODO.md  uncrustify.cfg
example/: Graphicsdemo.cpp  Vector2demo.cpp  Vector3demo.cpp  main.cpp
include/cligfx/: cligfx.hpp  drawable.hpp  framebuffer.hpp  image.hpp  sprite.hpp  text.hpp  transformable.hpp  utils.hpp  vector.hpp
src/: framebuffer.cpp  image.cpp  image.hpp  main.cpp  sprite.cpp  sprite.hpp  text.cpp  transformable.cpp  utils.cpp  vector.hpp
